--- a/ms/references.bib
+++ b/ms/references.bib
@@ -8,6 +8,20 @@
   pages = {545--562},
 }
 
+
+@article{Charrier-2013,
+  title = {Evaluation of the impact of frost resistances on potential altitudinal limit of trees},
+  volume = {33},
+  doi = {10.1093/treephys/tpt062},
+  number = {9},
+  journal = {Tree Physiology},
+  author = {Charrier, G. and Cochard, H. and Ameglio, T.},
+  month = sep,
+  year = {2013},
+  pages = {891--902}
+}
+
+
 @Article{Chave-2006,
   title = {Regional and phylogenetic variation of wood density across 2456 neotropical tree species},
   volume = {16},
@@ -185,6 +199,33 @@
   pages = {706--717},
 }
 
+
+@article{McDowell-2011,
+  title = {Mechanisms Linking Drought, Hydraulics, Carbon Metabolism, and Vegetation Mortality},
+  volume = {155},
+  doi = {10.1104/pp.110.170704},
+  number = {3},
+  journal = {{PLANT} {PHYSIOLOGY}},
+  author = {{McDowell}, N. G.},
+  month = mar,
+  year = {2011},
+  pages = {1051--1059}
+}
+
+@article{McDowell-2008,
+  title = {Mechanisms of plant survival and mortality during drought: why do some plants survive while others succumb to drought?},
+  volume = {178},
+  shorttitle = {Mechanisms of plant survival and mortality during drought},
+  doi = {10.1111/j.1469-8137.2008.02436.x},
+  number = {4},
+  journal = {New Phytologist},
+  author = {{McDowell}, Nate and Pockman, William T. and Allen, Craig D. and Breshears, David D. and Cobb, Neil and Kolb, Thomas and Plaut, Jennifer and Sperry, John and West, Adam and Williams, David G. and Yepez, Enrico A.},
+  month = jun,
+  year = {2008},
+  pages = {719--739}
+}
+
+
 @Article{Moles-2014,
   title = {Which is a better predictor of plant traits: temperature or precipitation?},
   doi = {10.1111/jvs.12190},
@@ -225,6 +266,36 @@
   month = mar,
   year = {2009},
   pages = {137--149}
+}
+
+
+@article{Poorter-2010,
+  title = {The importance of wood traits and hydraulic conductance for the performance and life history strategies of 42 rainforest tree species},
+  volume = {185},
+  doi = {10.1111/j.1469-8137.2009.03092.x},
+  number = {2},
+  journal = {New Phytologist},
+  author = {Poorter, Lourens and {McDonald}, Imole and Alarc{\'o}n, Alfredo and Fichtler, Esther and Licona, Juan-Carlos and Pe{\~n}a-Claros, Marielos and Sterck, Frank and Villegas, Zulma and Sass-Klaassen, Ute},
+  month = jan,
+  year = {2010},
+  pages = {481--492}
+}
+
+
+
+
+@article{Prentice-2014,
+  title = {Balancing the costs of carbon gain and water transport: testing a new theoretical framework for plant functional ecology},
+  volume = {17},
+  shorttitle = {Balancing the costs of carbon gain and water transport},
+  doi = {10.1111/ele.12211},
+  number = {1},
+  journal = {Ecology Letters},
+  author = {Prentice, I. Colin and Dong, Ning and Gleason, Sean M. and Maire, Vincent and Wright, Ian J.},
+  editor = {Penuelas, Josep},
+  month = jan,
+  year = {2014},
+  pages = {82--91}
 }
 
 
@@ -320,14 +391,28 @@
 
 
 
-@Article{Simova-2014,
+@Article{Simova-2015,
   title = {Shifts in trait means and variances in North American tree assemblages: species richness patterns are loosely related to the functional space},
   doi = {10.1111/ecog.00867},
   journal = {Ecography},
+volume = 38,
   author = {Irena {{\v S}{\'\i}mov{\'a}} and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
-  year = {2014},
-  pages = {n/a--n/a},
+  year = {2015},
+  pages = {649--658}
 }
+
+@article{Skelton-2015,
+  title = {Predicting plant vulnerability to drought in biodiverse regions using functional traits},
+  volume = {112},
+  doi = {10.1073/pnas.1503376112},
+  number = {18},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Skelton, Robert Paul and West, Adam G. and Dawson, Todd E.},
+  month = may,
+  year = {2015},
+  pages = {5744--5749}
+}
+
 
 @article{Smith-1989,
   title = {A theory of the spatial and temporal dynamics of plant communities},
@@ -381,6 +466,20 @@
   year = {2002},
   pages = {403--416}
 }
+
+
+@article{Wright-2003,
+  title = {Least-Cost Input Mixtures of Water and Nitrogen for Photosynthesis},
+  volume = {161},
+  doi = {10.1086/344920},
+  number = {1},
+  journal = {The American Naturalist},
+  author = {Wright, Ian J. and Reich, Peter B. and Westoby, Mark},
+  month = jan,
+  year = {2003},
+  pages = {98--111}
+}
+
 
 @Article{Wright-2004,
   title = {The world-wide leaf economics spectrum},
