move section on potential traits linked to the gradient into new subsection

--- a/ms/references.bib
+++ b/ms/references.bib
@@ -42,6 +42,30 @@
   pages = {351--366},
 }
 
+@article{Chen-2009,
+  title = {Inter-species variation of photosynthetic and xylem hydraulic traits in the deciduous and evergreen Euphorbiaceae tree species from a seasonally tropical forest in south-western China},
+  volume = {24},
+  doi = {10.1007/s11284-008-0482-4},
+  number = {1},
+  journal = {Ecological Research},
+  author = {Chen, Jun-Wen and Zhang, Qiang and Cao, Kun-Fang},
+  month = jan,
+  year = {2009},
+  pages = {65--73}
+}
+
+@article{Choat-2011,
+  title = {Xylem traits mediate a trade-off between resistance to freeze-thaw-induced embolism and photosynthetic capacity in overwintering evergreens},
+  volume = {191},
+  doi = {10.1111/j.1469-8137.2011.03772.x},
+  number = {4},
+  journal = {New Phytologist},
+  author = {Choat, Brendan and Medek, Danielle E. and Stuart, Stephanie A. and Pasquet-Kok, Jessica and Egerton, John J. G. and Salari, Hooman and Sack, Lawren and Ball, Marilyn C.},
+  month = sep,
+  year = {2011},
+  pages = {996--1005}
+}
+
 @Article{Cornwell-2009,
   title = {Community assembly and shifts in plant trait distributions across an environmental gradient in coastal California},
   volume = {79},
@@ -197,6 +221,31 @@
   author = {Vincent Maire and Ian J. Wright and I. Colin Prentice and Niels H. Batjes and Radika Bhaskar and Peter M. van Bodegom and Will K. Cornwell and David Ellsworth and {\"U}lo Niinemets and Alejandro Ordonez and Peter B. Reich and Louis S. Santiago},
   year = {2015},
   pages = {706--717},
+}
+
+@article{Maherali-2004,
+	title = {Adaptive variation in the vulnerability of woody plants to xylem cavitation},
+	volume = {85},
+	url = {http://www.esajournals.org/doi/abs/10.1890/02-0538},
+	number = {8},
+	urldate = {2015-07-01},
+	journal = {Ecology},
+	author = {Maherali, Hafiz and Pockman, William T. and Jackson, Robert B.},
+	year = {2004},
+	pages = {2184--2199},
+}
+
+@article{Markesteijn-2011,
+  title = {Hydraulics and life history of tropical dry forest tree species: coordination of species' drought and shade tolerance},
+  volume = {191},
+  shorttitle = {Hydraulics and life history of tropical dry forest tree species},
+  doi = {10.1111/j.1469-8137.2011.03708.x},
+  number = {2},
+  journal = {New Phytologist},
+  author = {Markesteijn, Lars and Poorter, Lourens and Bongers, Frans and Paz, Horacio and Sack, Lawren},
+  month = jul,
+  year = {2011},
+  pages = {480--495}
 }
 
 
