fixe error in refs

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -205,7 +205,7 @@ of survival but
 with a carbon cost (for instance lower vessel size leading to lower
 $A_{max}$ \citep{Poorter-2010}, we know that vessel diameter scale with scale with sapwood area conductivity and $A_{max}$ \citep{Chen-2009,Choat-2011}).
 
-TODO need to read \citet{{Markesteijn-2011} for potential coordination between vessel size and shade-tolerance as well.
+TO DO need to read \citet{Markesteijn-2011} for potential coordination between vessel size and shade-tolerance as well.
 
 \begin{itemize}
 \item  For frost tolerance, \citet{Charrier-2013} provides an analysis of physiological processes and 'traits' that may explain variation in tree elevation limits between 11 European tree species (including one pine and 10 angiosperms). Their results show that the level of frost cavitation and the ability to refill cavitated vessels are driven by the vessel size and the allocation to non-structural carbohydrate (NSC) in winter (helping to improve living tissue survival during frost and increasing the osmotic pressure to refill the vessel). Frost cavitation is in turn strongly correlated to species elevation limit. Thus small vessel size and high allocation to NSC could favour survival in frost conditions. The cost of small vessel size has been shown to be a smaller growth rate \citep{Poorter-2010} (include that into $A_{max}$?) and allocation to NSC have a direct carbon cost. Diverting carbon from growth in to NSC may have the effect of amplifying the changes in LMA.
